--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "homepage": "https://github.com/KochiyaOcean/react-file-drop#readme",
     "dependencies": {
+        "attr-accept": "^1.0.3"
     },
     "peerDependencies": {
         "react": ">=0.13"
