--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "react-file-drop",
+    "name": "react-file-dropzone",
     "author": "KochiyaOcean",
-    "version": "0.1.8",
+    "version": "0.2.0",
     "description": "",
     "main": "./FileDrop",
     "keywords": [
