--- a/package.json
+++ b/package.json
@@ -1,46 +1,45 @@
 {
-    "name": "react-file-dropzone",
-    "author": "KochiyaOcean",
-    "version": "0.2.0",
-    "description": "",
-    "main": "./FileDrop",
-    "keywords": [
-        "react file gmail",
-        "react file facebook",
-        "react",
-        "react-file-drop",
-        "file",
-        "gmail",
-        "facebook",
-        "dropzone",
-        "upload",
-        "drag",
-        "drop",
-        "drag and drop",
-        "drag n drop",
-        "react file upload",
-        "react file drag drop",
-        "react dropzone",
-        "window",
-        "document"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/KochiyaOcean/react-file-drop.git"
-    },
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/KochiyaOcean/react-file-drop/issues"
-    },
-    "homepage": "https://github.com/KochiyaOcean/react-file-drop#readme",
-    "dependencies": {
-        "attr-accept": "^1.0.3"
-    },
-    "peerDependencies": {
-        "react": ">=0.13"
-    },
-    "devDependencies": {
-    },
-    "directories": {
-    }
+  "name": "react-file-dropzone",
+  "author": "KochiyaOcean",
+  "version": "0.3.0",
+  "description": "",
+  "main": "./FileDrop",
+  "keywords": [
+    "react file gmail",
+    "react file facebook",
+    "react",
+    "react-file-drop",
+    "file",
+    "gmail",
+    "facebook",
+    "dropzone",
+    "upload",
+    "drag",
+    "drop",
+    "drag and drop",
+    "drag n drop",
+    "react file upload",
+    "react file drag drop",
+    "react dropzone",
+    "window",
+    "document"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KochiyaOcean/react-file-drop.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/KochiyaOcean/react-file-drop/issues"
+  },
+  "homepage": "https://github.com/KochiyaOcean/react-file-drop#readme",
+  "dependencies": {
+    "attr-accept": "^1.0.3"
+  },
+  "peerDependencies": {
+    "react": ">=0.13",
+    "prop-types": ">=15.0"
+  },
+  "devDependencies": {},
+  "directories": {}
 }
