--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "peerDependencies": {
     "react": ">=0.13",
-    "prop-types": ">=15.0"
+    "prop-types": ">=15.0",
+    "create-react-class": ">=15.0"
   },
   "devDependencies": {},
   "directories": {}
